Alignment fixes to navbar-brand

--- a/brambling/sass/modules/_dancerfly.sass
+++ b/brambling/sass/modules/_dancerfly.sass
@@ -11,8 +11,10 @@ h1, h2, h3, h4, h5, h6
 	color: lighten($yellow-dark, 30%)
 
 #dancerflyBrand
-	display: inline
 	margin-right: 5px
 	position: relative
-	top: -2px
-	height: 24px
+	top: -1px
+	height: 22px
+
+#dancerflyBrandName
+	vertical-align: top
