--- a/brambling/static/brambling/css/styles.css
+++ b/brambling/static/brambling/css/styles.css
@@ -6156,9 +6156,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #dancerflyBrand {
-  display: inline;
   margin-right: 5px;
   position: relative;
-  top: -2px;
-  height: 24px;
+  top: -1px;
+  height: 22px;
+}
+
+#dancerflyBrandName {
+  vertical-align: top;
 }
